--- a/css/style.css
+++ b/css/style.css
@@ -86,12 +86,48 @@ a:hover { color: #036; }
     \\ ========================================== //
 */
 
+body{
+  background-image: url('../img/background.jpg');
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
 
+header{
 
+}
 
+#_content{
 
+}
 
+#_infoButton{
+  left: 0px;
+  right: 0px;
+  width: 50px;
+  height: 50px;
+  border-bottom-right-radius: 50px;
+  border-right: 8px solid #e0dfeb;
+  border-bottom: 8px solid #e0dfeb;
+  box-shadow: 0px 0px 15px #444444;
 
+  background: #303743;
+}
+
+a{
+  color: #dfdfdf;
+  font-weight: bold;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+._link{
+  
+  position: relative;
+  margin-left: 20px;
+  top: 10px;
+}
 
 
 
