--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,8 @@ height: 50px;
 }
 
 #_infoButton{
+  display: block;
+
   left: 0px;
   right: 0px;
   width: 50px;
@@ -112,6 +114,18 @@ height: 50px;
   box-shadow: 0px 0px 15px #444444;
 
   background: #303743;
+  background-image: url('../img/info.png');
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: 10px;
+}
+
+#_infoButton:hover{
+  background: #e0dfeb;
+  background-image: url('../img/info.png');
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: 10px;
 }
 
 a, a:visited{
@@ -129,9 +143,12 @@ a:hover{
 }
 
 ._link{
+  display: block;
   position: relative;
-  margin-left: 20px;
-  top: 10px;
+  margin-left: 0px;
+  top: 0px;
+  width: 50px;
+  height: 50px;
 }
 
 /*
@@ -144,13 +161,32 @@ Content style
   right: 0px;
 }
 
+#_startButton a{
+  font-size: 50px;
+}
+
+#_startButton{
+  position: absolute;
+  width: 380px;
+  height: 100px;
+  text-align: center;
+  padding-top: 20px;
+
+  background-image: url('../img/startbutton.png');
+  background-repeat: no-repeat;
+  margin-top: 200px;
+  margin-left: 50%;
+  left: -200px;
+}
 
 /*
 Footer style
 */
 footer{
+  position: absolute;
+  width: 100%;
   height: 50px;
-  margin-bottom: 0px;
+  bottom: 0px;
 
   background: rgba(0,0,0,0.5);
 }
