--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -8,7 +8,7 @@
 	font-size: 15px;
 
 	padding: 16px;
-	border: 2px solid black;
+	border: 2px solid #303743;
 	border-radius: 10px;
 	background: #e0dfeb;
 }
@@ -21,7 +21,7 @@
 	width: 20px;
 	height: 20px;
 	margin-left: 50%;
-	left: -10px;
+	left: -8px;
 
 	background: #e0dfeb;
 
