--- a/css/startpage.css
+++ b/css/startpage.css
@@ -1,126 +1,109 @@
 body {
-  background-image: url('../img/background.jpg');
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+	background-image: url('../img/background.jpg');
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
 
 /*
  Header style for Menü and some other things on the top
  */
 header {
-  height: 50px;
+	height: 50px;
 }
 
-#_infoButton {
-  display: block;
-  left: 0px;
-  right: 0px;
-  width: 50px;
-  height: 50px;
-  border-bottom-right-radius: 50px;
-  border-right: 8px solid #e0dfeb;
-  border-bottom: 8px solid #e0dfeb;
-
-  box-shadow: 0px 0px 15px #444444;
-  background: #303743;
-  background-image: url('../img/info.png');
-  background-size: 40%;
-  background-repeat: no-repeat;
-  background-position: 10px;
+#infoButton {
+	display: block;
+	left: 0px;
+	right: 0px;
+	width: 50px;
+	height: 50px;
+	border-bottom-right-radius: 50px;
+	border-right: 8px solid #e0dfeb;
+	border-bottom: 8px solid #e0dfeb;
+	box-shadow: 0px 0px 15px #444444;
+	background: #303743;
+	background-image: url('../img/info.png');
+	background-size: 40%;
+	background-repeat: no-repeat;
+	background-position: 10px;
 }
 
-
-#_infoButton:hover {
-  background: #e0dfeb;
-  background-image: url('../img/info.png');
-  background-size: 40%;
-  background-repeat: no-repeat;
-  background-position: 10px;
+#infoButton:hover {
+	background: #e0dfeb;
+	background-image: url('../img/info.png');
+	background-size: 40%;
+	background-repeat: no-repeat;
+	background-position: 10px;
 }
 
 a, a:visited {
-  color: #dfdfdf;
-  font-weight: bold;
-  font-size: 20px;
-  text-decoration: none;
+	color: #dfdfdf;
+	font-weight: bold;
+	font-size: 20px;
+	text-decoration: none;
 }
-
 
 a:hover {
-  color: #e0dfeb;
-  font-weight: bold;
-  font-size: 20px;
-  text-decoration: none;
+	color: #e0dfeb;
+	font-weight: bold;
+	font-size: 20px;
+	text-decoration: none;
 }
 
-._link {
-  display: block;
-  position: relative;
-  margin-left: 0px;
-  top: 0px;
-  width: 50px;
-  height: 50px;
+.link {
+	display: block;
+	position: relative;
+	margin-left: 0px;
+	top: 0px;
+	width: 50px;
+	height: 50px;
 }
 
 /*
  Content style
  */
-#_content {
-  text-align: center;
-  min-height: 500px;
-  left: 0px;
-  right: 0px;
+#content {
+	text-align: center;
+	min-height: 500px;
+	left: 0px;
+	right: 0px;
 }
 
-
-#_content p {
-  font-size: 30px;
+#content p {
+	font-size: 30px;
 }
 
-#_content h1 {
-  font-size: 40px;
+#content h1 {
+	font-size: 40px;
 }
 
-#_startInfo {
-  position: absolute;
-  width: 700px;
-  margin-top: 50px;
-  margin-left: 50%;
-  left: -350px;
+#startInfo {
+	max-width: 700px;
+	min-width: 350px;
+	margin: 50px auto;
 }
 
-
-#_startButton a {
-  font-size: 50px;
+#startButtonImage {
+	height: 100px;
+	width: 350px;
+	min-width: 350px;
+	margin: 0 auto;
+	background-image: url('../img/startbutton.png');
+	background-repeat: no-repeat;
 }
 
-#_startButton {
-  position: absolute;
-  width: 380px;
-  height: 100px;
-  text-align: center;
-  padding-top: 20px;
-  background-image: url('../img/startbutton.png');
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  margin-top: 50%;
-  top: -50px;
-  margin-left: 50%;
-  left: -200px;
-}
-
-#_startButton:hover{
-  background-image: url('../img/startbutton_hover.png');
+#startButtonImage:hover {
+	opacity: 0.85;
 }
 
 /*
  Footer style
  */
 footer {
-  position: absolute;
-  width: 100%;
-  bottom: 0px;
-  background: rgba(0,0,0,0.5);
+	position: absolute;
+	width: 100%;
+	bottom: 0px;
+	background: rgba(0,0,0,0.5);
 }
