--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,5 +1,5 @@
 
-#_tooltip {
+#tooltip {
   position: absolute;
   width: 200px;
   margin-top: 10px;
@@ -12,7 +12,7 @@
   background: #e0dfeb;
 }
 
-#_tooltipArrow {
+#tooltipArrow {
   position: absolute;
   border-left: 2px solid black;
   border-top: 2px solid black;
@@ -25,4 +25,10 @@
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
 
+}
+
+#local-stream, #remote-stream{
+  width:200px;
+  height:200px;
+  background:#999;
 }
