--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,4 +1,3 @@
-
 #tooltip {
   position: absolute;
   width: 200px;
@@ -26,8 +25,32 @@
   -o-transform: rotate(45deg);
 }
 
-#local-stream, #remote-stream{
-  width:200px;
-  height:200px;
-  background:#999;
+#videoboxes {
+  display: inline-block;
+  background: #303743;
+  margin: 25px auto 0px auto;
+  padding-bottom: 25px;
 }
+
+#videoboxes .user {
+  width: 300px;
+  height: 300px;
+  margin: 10px;
+  float: left;
+}
+
+#videoboxes label {
+  float: left;
+  background: #000;
+  color: #fff;
+  width: 300px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+#videoboxes video {
+  width: 300px;
+  height: 300px;
+  background: #CCCCCC;
+}
+
