--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -65,8 +65,12 @@
   border-bottom: 8px solid #e0dfeb;
   box-shadow: 0px 0px 15px #444444;
   background: #303743;
-  background-image: url('../img/info.png');
-  background-size: 40%;
+  background-image: url('../img/hoerer_rot.png');
+  background-size: 70%;
   background-repeat: no-repeat;
   background-position: 10px;
+}
+
+#hangupButton:hover{
+  opacity: 0.8;
 }
