--- a/css/startpage.css
+++ b/css/startpage.css
@@ -1,9 +1,5 @@
 body {
 	background-image: url('../img/background.jpg');
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
 }
 
 /*
@@ -14,9 +10,7 @@ header {
 }
 
 #infoButton {
-	display: block;
-	left: 0px;
-	right: 0px;
+  display: block;
 	width: 50px;
 	height: 50px;
 	border-bottom-right-radius: 50px;
@@ -24,14 +18,6 @@ header {
 	border-bottom: 8px solid #e0dfeb;
 	box-shadow: 0px 0px 15px #444444;
 	background: #303743;
-	background-image: url('../img/info.png');
-	background-size: 40%;
-	background-repeat: no-repeat;
-	background-position: 10px;
-}
-
-#infoButton:hover {
-	background: #e0dfeb;
 	background-image: url('../img/info.png');
 	background-size: 40%;
 	background-repeat: no-repeat;
@@ -53,7 +39,6 @@ a:hover {
 }
 
 .link {
-	display: block;
 	position: relative;
 	margin-left: 0px;
 	top: 0px;
@@ -94,18 +79,16 @@ a:hover {
 	background-repeat: no-repeat;
 }
 
-#startButtonImage:hover {
-	opacity: 0.85;
+#startButtonImage:hover, #infoButton:hover{
+	opacity: 0.8;
 }
-
-
 
 /*
  Footer style
  */
 footer {
 	position: absolute;
-	width: 100%;
+	//width: 100%;
 	bottom: 0px;
 	background: rgba(0,0,0,0.5);
 }
