--- a/css/startpage.css
+++ b/css/startpage.css
@@ -24,6 +24,21 @@ header {
 	background-position: 10px;
 }
 
+#backButton {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-bottom-right-radius: 50px;
+  border-right: 8px solid #e0dfeb;
+  border-bottom: 8px solid #e0dfeb;
+  box-shadow: 0px 0px 15px #444444;
+  background: #303743;
+  background-image: url('../img/backbutton.png');
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: 0px;
+}
+
 a, a:visited {
 	color: #dfdfdf;
 	font-weight: bold;
@@ -60,6 +75,10 @@ a:hover {
 	font-size: 30px;
 }
 
+#content li {
+  font-size: 22px;
+}
+
 #content h1 {
 	font-size: 40px;
 }
@@ -68,6 +87,12 @@ a:hover {
 	max-width: 700px;
 	min-width: 350px;
 	margin: 50px auto;
+}
+
+#aboutInfo {
+  max-width: 700px;
+  min-width: 350px;
+  margin: 50px auto;
 }
 
 #startButtonImage {
@@ -79,7 +104,7 @@ a:hover {
 	background-repeat: no-repeat;
 }
 
-#startButtonImage:hover, #infoButton:hover{
+#startButtonImage:hover, #infoButton:hover, #backButton:hover{
 	opacity: 0.8;
 }
 
