--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,33 +1,29 @@
-#tooltip {
+#infoField{
   position: absolute;
-  width: 200px;
-  margin-top: 10px;
-  margin-left: 50%;
-  left: -113px;
-  font-size: 15px;
-  padding: 16px;
-  border: 2px solid black;
-  border-radius: 10px;
-  background: #e0dfeb;
+
+  -moz-box-shadow: 0px 0px 15px #444444;
+  -webkit-box-shadow: 0px 0px 15px #444444;
+  border-radius: 5px;
+
+  width: 300px;
+  text-align: center;
+  padding: 20px;
+  margin: 250px 100px;
+  background: #303743;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
 }
 
-#tooltipArrow {
-  position: absolute;
-  border-left: 2px solid black;
-  border-top: 2px solid black;
-  width: 20px;
-  height: 20px;
-  margin-left: 50%;
-  left: -10px;
-  background: #e0dfeb;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
+#video{
+
 }
 
 #videoboxes {
   display: inline-block;
-  background: #303743;
+  border: 1px solid #333;
+  border-radius: 5px;
+  background: #e0dfeb;
   margin: 25px auto 0px auto;
   padding-bottom: 25px;
 }
@@ -40,21 +36,24 @@
 }
 
 #videoboxes label {
+  border: 1px solid #ddd;
   float: left;
-  background: #000;
+  background: #303743;
   color: #fff;
   width: 300px;
-  display: block;
+  display: block;#e0dfeb
   margin-bottom: 10px;
+  padding: 5px 0px 5px 0px;
 }
 
 #videoboxes video {
+  border: 1px solid #ddd;
   width: 300px;
-  height: 300px;
-  background: #CCCCCC;
+  height: 295px;
+  background: #999;
 }
 
-#hangupButton{
+#hangupButton {
   position: absolute;
   top: 0px;
   right: 0px;
@@ -71,6 +70,6 @@
   background-position: 10px;
 }
 
-#hangupButton:hover{
+#hangupButton:hover {
   opacity: 0.8;
 }
