--- a/css/startpage.css
+++ b/css/startpage.css
@@ -1,7 +1,12 @@
+html{
+  width: 100%;  
+}
+
 body {
 	background-image: url('../img/background.jpg');
 	background-repeat: no-repeat;
 	background-size: 100%;
+	width: 100%;
 }
 
 /*
