added some infofield, that lets the user know that the browser ask for the ability to get camera and mic access

--- a/css/startpage.css
+++ b/css/startpage.css
@@ -11,6 +11,25 @@ body {
 	overflow-y: hidden;
 }
 
+/* Font style */
+#content p {
+  font-size: 30px;
+}
+
+#content li {
+  font-size: 22px;
+}
+
+#content h1 {
+  font-size: 40px;
+}
+
+#infoField p{
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
+
 /*
  Header style for Menü and some other things on the top
  */
@@ -78,18 +97,6 @@ a:hover {
 	min-height: 500px;
 	left: 0px;
 	right: 0px;
-}
-
-#content p {
-	font-size: 30px;
-}
-
-#content li {
-  font-size: 22px;
-}
-
-#content h1 {
-	font-size: 40px;
 }
 
 #startInfo {
