--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,18 +1,28 @@
 #infoField{
   position: absolute;
-
-  -moz-box-shadow: 0px 0px 15px #444444;
-  -webkit-box-shadow: 0px 0px 15px #444444;
-  border-radius: 5px;
-
   width: 300px;
   text-align: center;
   padding: 20px;
-  margin: 250px 100px;
+  margin-top: 100px;
+  margin-left: -170px;
+  left: 50%; 
+
+  z-index: 20;
+  
+  -moz-box-shadow: 0px 0px 15px #ddd;
+  -webkit-box-shadow: 0px 0px 15px #ddd;
+  border-radius: 5px;
   background: #303743;
-  color: white;
-  font-size: 16px;
-  font-weight: bold;
+}
+
+#blackFilter{
+  position: absolute;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.5;
+  z-index: 10;
 }
 
 #socialSidebar{
@@ -20,6 +30,7 @@
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   box-shadow: 0px 0px 15px #444444;
+  padding: 5px;
   
   right: 0px;
   top: 75px;
@@ -32,6 +43,7 @@
   cursor: pointer;
   width: 60px;
   height: 60px;
+  float: left;
 }
 
 .socialButtons:hover{
@@ -41,6 +53,20 @@
 .facebookButton{
   display: block;
   background-image: url('../img/facebookbutton.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.googleButton{
+  display: block;
+  background-image: url('../img/googlebutton.png');
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.twitterButton{
+  display: block;
+  background-image: url('../img/twitterbutton.png');
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
