--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -3,14 +3,14 @@
   width: 300px;
   text-align: center;
   padding: 20px;
-  margin-top: 100px;
+  margin-top: 120px;
   margin-left: -170px;
   left: 50%; 
 
   z-index: 20;
   
-  -moz-box-shadow: 0px 0px 15px #ddd;
-  -webkit-box-shadow: 0px 0px 15px #ddd;
+  box-shadow: 0px 0px 15px #444;
+  -webkit-box-shadow: 0px 0px 15px #444;
   border-radius: 5px;
   background: #303743;
 }
@@ -20,8 +20,10 @@
   display: none;
   width: 100%;
   height: 100%;
-  background: black;
-  opacity: 0.5;
+  background-image: url('../img/background.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  opacity: 0.8;
   z-index: 10;
 }
 
