--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,10 +1,8 @@
-#infoField{
+#infoField {
   position: absolute;
-
   -moz-box-shadow: 0px 0px 15px #444444;
   -webkit-box-shadow: 0px 0px 15px #444444;
   border-radius: 5px;
-
   width: 300px;
   text-align: center;
   padding: 20px;
@@ -15,12 +13,11 @@
   font-weight: bold;
 }
 
-#socialSidebar{
+#socialSidebar {
   position: absolute;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   box-shadow: 0px 0px 15px #444444;
-  
   right: 0px;
   top: 75px;
   height: 500px;
@@ -28,17 +25,17 @@
   background: #e0dfeb;
 }
 
-.socialButtons{
+.socialButtons {
   cursor: pointer;
   width: 60px;
   height: 60px;
 }
 
-.socialButtons:hover{
+.socialButtons:hover {
   opacity: 0.8;
 }
 
-#facebookButton{
+#facebookButton {
   display: block;
   background-image: url('../img/facebookbutton.jpg');
   background-size: 100% 100%;
@@ -51,32 +48,37 @@
   border-radius: 5px;
   background: #e0dfeb;
   margin: 25px auto 0px auto;
-  padding-bottom: 25px;
 }
 
 #videoboxes .user {
   width: 300px;
-  height: 300px;
+  height: 330px;
   margin: 10px;
   float: left;
 }
 
-#videoboxes label {
-  border: 1px solid #ddd;
+#videoboxes .name {
   float: left;
   background: #303743;
   color: #fff;
   width: 300px;
-  display: block;#e0dfeb
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   padding: 5px 0px 5px 0px;
 }
 
 #videoboxes video {
-  border: 1px solid #ddd;
   width: 300px;
-  height: 295px;
+  height: 200px;
+  margin-bottom: 5px;
   background: #999;
+}
+
+#videoboxes form, textarea, input {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+  width: 100%;
 }
 
 #hangupButton {
