--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -1,8 +1,10 @@
 #infoField {
   position: absolute;
 
+   box-shadow: 0px 0px 15px #444;
   -moz-box-shadow: 0px 0px 15px #444444;
   -webkit-box-shadow: 0px 0px 15px #444444;
+
   border-radius: 5px;
 
   width: 300px;
@@ -14,8 +16,7 @@
 
   z-index: 20;
   
-  box-shadow: 0px 0px 15px #444;
-  -webkit-box-shadow: 0px 0px 15px #444;
+  
   border-radius: 5px;
   background: #303743;
 }
@@ -90,18 +91,20 @@
 #videoboxes .user {
   width: 300px;
   height: 230px;
-
   margin: 10px;
   float: left;
 }
 
 #videoboxes .name {
   float: left;
-  background: #303743;
-  color: #fff;
+  //border: 1px solid #303743;
+  color: #303743;
   width: 300px;
   margin-bottom: 5px;
   padding: 5px 0px 5px 0px;
+  
+  box-shadow: inset 1px 1px 5px #444;
+  -webkit-box-shadow: inset 1px 1px 5px #444;
 }
 
 #videoboxes video {
