--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -58,6 +58,29 @@
   opacity: 0.8;
 }
 
+#userInfo p{
+  font-size: 16px;
+}
+
+#userInfo img{
+  display: none;
+}
+
+#friends{
+  height: 70%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+#friends li{
+  font-size: 13.5px;
+  text-align: left;
+  cursor: pointer;
+}
+
+#friends li:hover{
+  background: #A0CAE2;
+}
 
 .facebookButton{
   display: block;
@@ -82,35 +105,31 @@
 
 #videoboxes {
   display: inline-block;
-  border: 1px solid #333;
-  border-radius: 5px;
-  background: #e0dfeb;
+
   margin: 25px auto 0px auto;
+  padding: 5px;
 }
 
 #videoboxes .user {
   width: 300px;
-  height: 230px;
-  margin: 10px;
-  float: left;
 }
 
 #videoboxes .name {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   float: left;
-  //border: 1px solid #303743;
   color: #303743;
-  width: 300px;
-  margin-bottom: 5px;
+  width: 100%;
   padding: 5px 0px 5px 0px;
+  background: #e0dfeb;
   
   box-shadow: inset 1px 1px 5px #444;
   -webkit-box-shadow: inset 1px 1px 5px #444;
 }
 
 #videoboxes video {
-  width: 300px;
-  height: 200px;
-  margin-bottom: 5px;
+  width: 100%;
+  float: left;
 
   background: #999;
 }
@@ -121,6 +140,28 @@
   box-sizing: border-box;
   float: left;
   width: 100%;
+}
+
+.videoOptions{
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  display: none;
+  position: absolute;
+  background: #303743;
+  opacity: 0.7;
+  width: 300px;
+  
+  z-index: 20;
+}
+
+.videoOptions img{
+  cursor: pointer;
+  width: 50px;
+  margin-top: 198px;
+}
+
+.videoOptions img:hover{
+  background: #888;
 }
 
 #hangupButton {
