--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -104,9 +104,6 @@
 
 #videoboxes .user {
   width: 300px;
-  height: 265px;
-  margin: 10px;
-  float: left;
 }
 
 #videoboxes .name {
@@ -122,9 +119,8 @@
 }
 
 #videoboxes video {
-
-  width: 300px;
-  height: 230px;
+  width: 100%;
+  float: left;
   background: #999;
 }
 
