--- a/assets/css/chatroom.css
+++ b/assets/css/chatroom.css
@@ -27,6 +27,27 @@
   z-index: 10;
 }
 
+.getFriends{
+  position: relative;
+  right: 0px;
+  top: 100px;
+  width: 0px;
+  height: 0px;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  z-index: 100;
+  
+  opacity: 0.8;
+  background: #ffffff; /* Old browsers */
+  background: -moz-radial-gradient(center, ellipse cover, #ffffff 0%, #3692d8 60%); /* FF3.6+ */
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(60%,#3692d8)); /* Chrome,Safari4+ */
+  background: -webkit-radial-gradient(center, ellipse cover, #ffffff 0%,#3692d8 60%); /* Chrome10+,Safari5.1+ */
+  background: -o-radial-gradient(center, ellipse cover, #ffffff 0%,#3692d8 60%); /* Opera 12+ */
+  background: -ms-radial-gradient(center, ellipse cover, #ffffff 0%,#3692d8 60%); /* IE10+ */
+  background: radial-gradient(ellipse at center, #ffffff 0%,#3692d8 60%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#3692d8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
 #socialSidebar {
   position: absolute;
   border-top-left-radius: 5px;
