--- a/assets/css/chatroom.css
+++ b/assets/css/chatroom.css
@@ -27,10 +27,24 @@
   z-index: 10;
 }
 
-.getFriends{
-  position: relative;
-  right: 0px;
-  top: 100px;
+#plus_button{
+  cursor: pointer;
+  position: absolute;
+  background: #303743;
+  border: 8px solid #e0dfeb;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  width: 50px;
+  height: 50px;
+  right: -34px;
+  margin-top: 316px;
+  z-index: 110;
+}
+
+.get_friends{
+  position: fixed;
+  right: -10px;
+  margin-top: 350px;
   width: 0px;
   height: 0px;
   border-top-left-radius: 0px;
@@ -54,7 +68,7 @@
   border-bottom-left-radius: 5px;
   box-shadow: 0px 0px 15px #444444;
   padding: 5px;
-  right: 0px;
+  right: -170px;
   top: 75px;
   height: 80%;
   width: 180px;
