--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -27,7 +27,7 @@
   z-index: 10;
 }
 
-#plus_button {
+#show_sidebar {
   cursor: pointer;
   position: absolute;
   background: #303743;
@@ -37,9 +37,10 @@
   box-shadow: 0px 0px 1px #fff;
   width: 50px;
   height: 50px;
-  right: -34px;
-  margin-top: 316px;
-  z-index: 110;
+  right: -20px;
+  margin-top: 300px;
+  font-size: bold;
+  z-index: 30;
   opacity: 1;
 }
 
@@ -63,13 +64,13 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#3692d8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
-#socialSidebar {
+#social_sidebar {
   position: absolute;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   box-shadow: 0px 0px 15px #444444;
   padding: 5px;
-  right: -170px;
+  right: -200px;
   top: 75px;
   height: 80%;
   width: 180px;
