--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -30,20 +30,26 @@
 #show_sidebar {
   cursor: pointer;
   position: absolute;
-  background: #303743;
-  border: 8px solid #e0dfeb;
+  background: #e0dfeb;
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
+  border-bottom-right-radius: 50px;
+  border-top-right-radius: 50px;
   box-shadow: 0px 0px 1px #fff;
   width: 50px;
   height: 50px;
-  right: -20px;
+  right: -25px;
   margin-top: 300px;
-  font-size: bold;
+  font-size: 30px;
+  font-family: arial;
+  color: #303743;
   z-index: 30;
-  opacity: 1;
+  opacity: 0.5;
 }
 
+#show_sidebar:hover{
+  opacity: 1;
+}
 .get_friends {
   position: fixed;
   right: -10px;
@@ -70,7 +76,7 @@
   border-bottom-left-radius: 5px;
   box-shadow: 0px 0px 15px #444444;
   padding: 5px;
-  right: -200px;
+  right: -190px;
   top: 75px;
   height: 80%;
   width: 180px;
