--- a/assets/css/startpage.css
+++ b/assets/css/startpage.css
@@ -1,5 +1,6 @@
 html{
-  width: 100%;  
+  width: 100%;
+  overflow:hidden;
 }
 
 body {
@@ -7,8 +8,7 @@ body {
 	background-repeat: no-repeat;
 	background-size: 100%;
 	width: 100%;
-	overflow-x: hidden;
-	overflow-y: hidden;
+	height: 100%;
 }
 
 /* Font style */
