edit hover options

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -199,15 +199,26 @@
 }
 
 .videoOptions {
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;//
-  display: none;//
-  visibility: hidden;
-  position: absolute;
-  background: #303743;
   opacity: 0;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  position: absolute;
+  background: #fdfdfd;
+  
   width: 300px;
+  height: 251px;
   z-index: 20;
+}
+
+.videoOptionsItems{
+  width: 50%;
+  height: 50%;
+  float: left;
+}
+
+.videoOptionsItems:hover{
+  cursor: pointer;
+  background: #607890;
 }
 
 .videoOptions img {
@@ -241,29 +252,11 @@
   opacity: 0.8;
 }
 
-#videoEffectsBar {
-  position: relative;
-  margin-top: 250px;
-  height: 20px;
-  color: #303743;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  width: 100%;
-  padding: 5px 0px 5px 0px;
-  background: #e0dfeb;
-  background-image: url('../img/arrow_down.png');
-  background-repeat: no-repeat;
-  background-position: 9.8em -0.3em;
-  box-shadow: inset 1px 1px 5px #444;
-  -webkit-box-shadow: inset 1px 1px 5px #444;
-  cursor: pointer;
-}
-
 #videoEffects {
   display: none;
-  margin-top: 25px;
+  margin-top: 250px;
   height: 40px;
-  width: 100%;
+  width: 300px;
   color: #303743;
   background: #e0dfeb;
   border-bottom-left-radius: 15px;
