snapshot-option in room controller improved and addional snapshot-option in snahpshot_window.html added

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -272,6 +272,13 @@
   height: 20px;
 }
 
+#faceDetectorOutput{
+  width: 100%;
+  float: left;
+  background: #A0A0A0;
+  display:none;
+}
+
 #progressSnapshotbar {
   display: none;
   margin: 0 auto;
