--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,3 +133,105 @@ a:hover { color: #036; }
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3{ page-break-after: avoid; }
 }
+
+/* OWN CSS CODE */
+html, body{
+  width: 100%;
+  height: 100%;
+}
+body {
+  background-image: url('../img/background.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.wrapper{
+  height:100%;
+  overflow:hidden;
+}
+
+/*
+ Header style for Menü and some other things on the top
+ */
+header {
+  height: 60px;
+}
+
+#infoButton {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-bottom-right-radius: 50px;
+  border-right: 8px solid #e0dfeb;
+  border-bottom: 8px solid #e0dfeb;
+  box-shadow: 0px 0px 15px #444444;
+  background: #303743;
+  background-image: url('../img/info.png');
+  background-size: 40%;
+  background-repeat: no-repeat;
+  background-position: 10px;
+}
+
+#backButton {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-bottom-right-radius: 50px;
+  border-right: 8px solid #e0dfeb;
+  border-bottom: 8px solid #e0dfeb;
+  box-shadow: 0px 0px 15px #444444;
+  background: #303743;
+  background-image: url('../img/backbutton.png');
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position: 0px;
+}
+
+a, a:visited {
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #999999;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.link {
+  position: relative;
+  margin-left: 0px;
+  top: 0px;
+  width: 50px;
+  height: 50px;
+}
+/*
+ Content style
+ */
+#content {
+  min-height: 500px;
+  height: 100%;
+  left: 0px;
+  right: 0px;
+  font-size: 14px;
+}
+
+/*
+ Footer style
+ */
+footer {
+  position: absolute;
+  width: 100%;
+  bottom: 0px;
+  background: rgba(0,0,0,0.5);
+}
+/* Font style */
+#content h1 {
+  font-size: 32px;
+}
+
+#infoField p{
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+}
