--- a/assets/css/hangup.css
+++ b/assets/css/hangup.css
@@ -1,14 +1,13 @@
-#roomsInfo {
+#hangupInfo{
   text-align: center;
   margin: auto;
-  width: 300px;
+  width: 400px;
   height: 100%;
 }
 
-#roomsInfo p{
+#hangupInfo div{
   position:relative;
   top:50%;
-  height:50px;
   margin-top:-150px;
   background:rgba(255,255,255,0.75);
   padding:20px;
