--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -1,18 +1,22 @@
 #infoField {
   position: absolute;
-  box-shadow: 0px 0px 15px #444;
-  -moz-box-shadow: 0px 0px 15px #444444;
-  -webkit-box-shadow: 0px 0px 15px #444444;
   border-radius: 5px;
-  width: 300px;
-  text-align: center;
-  padding: 20px;
-  margin-top: 120px;
-  margin-left: -170px;
+  width: 600px;
+  margin-left: -300px;
+  margin-top: -50px;
   left: 50%;
   z-index: 20;
-  border-radius: 5px;
-  background: #303743;
+  background: rgba(255,255,255,0);
+}
+
+#arrow{
+  float: left;
+  width: 100px;
+}
+
+#chrome{
+  float: left;
+  margin-top: 100px;
 }
 
 #blackFilter {
@@ -20,7 +24,8 @@
   display: none;
   width: 100%;
   height: 100%;
-  background-image: url('../img/background.jpg');
+  //background-image: url('../img/background.jpg');
+  background: rgba(0,0,0,0.95);
   background-repeat: no-repeat;
   background-size: 100%;
   opacity: 0.8;
@@ -29,13 +34,13 @@
 
 #show_sidebar_shadow {
   position: absolute;
-  border-top-left-radius: 50px;
-  border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px;
-  border-top-right-radius: 50px;
-  width: 50px;
-  height: 50px;
-  right: -25px;
+  border-top-left-radius: 70px;
+  border-bottom-left-radius: 70px;
+  border-bottom-right-radius: 70px;
+  border-top-right-radius: 70px;
+  width: 70px;
+  height: 70px;
+  right: -35px;
   margin-top: 300px;
   overflow-x: hidden;
   box-shadow: 0px 0px 15px #444;
@@ -45,18 +50,19 @@
 #show_sidebar {
   cursor: pointer;
   position: absolute;
-  background: #e0dfeb;
-  border-top-left-radius: 50px;
-  border-bottom-left-radius: 50px;
-  border-bottom-right-radius: 50px;
-  border-top-right-radius: 50px;
-  width: 50px;
-  height: 50px;
-  right: -25px;
+  background: #303743;
+  border-width: 5px;
+  border-top-left-radius: 70px;
+  border-bottom-left-radius: 70px;
+  border-bottom-right-radius: 70px;
+  border-top-right-radius: 70px;
+  width: 70px;
+  height: 70px;
+  right: -35px;
   margin-top: 300px;
-  font-size: 30px;
+  font-size: 50px;
   font-family: arial;
-  color: #303743;
+  color: #e0dfeb;
   z-index: 30;
   overflow-x: hidden;
 }
@@ -160,8 +166,8 @@
 
 #videoboxes {
   display: inline-block;
-  margin: 25px auto 0px auto;
-  padding: 5px;
+  margin: 15px auto 0px auto;
+  opacity: 0;
 }
 
 #videoboxes .user {
@@ -183,8 +189,8 @@
 }
 
 video {
-  width: 100%;
   float: left;
+  width: 100%;
   background: #999;
 }
 
@@ -197,6 +203,7 @@ video {
 }
 
 .videoOptions {
+  display: none;
   opacity: 0;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -272,4 +279,8 @@ video {
 #progressSnapshotbar {
   display: none;
   margin: 0 auto;
+}
+
+.room-wrapper{
+  text-align: center;
 }
