--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  outline:none;
 }
 
 article, aside, details, figcaption, figure,
