some images and more

--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -229,7 +229,7 @@ video {
 }
 
 .videoOptions {
-  display: none;
+ // display: none;
   opacity: 0;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
