--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -9,12 +9,12 @@
   background: rgba(255,255,255,0);
 }
 
-#arrow{
+#arrow {
   float: left;
   width: 100px;
 }
 
-#chrome{
+#chrome {
   float: left;
   margin-top: 100px;
 }
@@ -24,7 +24,7 @@
   display: none;
   width: 100%;
   height: 100%;
-  //background-image: url('../img/background.jpg');
+  background-image: url('../img/background.jpg');
   background: rgba(0,0,0,0.95);
   background-repeat: no-repeat;
   background-size: 100%;
@@ -53,7 +53,7 @@
   overflow-x: hidden;
 }
 
-#scrollbar_fix{
+#scrollbar_fix {
   position: absolute;
   width: 330px;
   min-height: 600px;
@@ -77,12 +77,10 @@
   left: 115px;
   top: 45%;
   overflow: hidden;
-  
   border-top-left-radius: 70px;
   border-bottom-left-radius: 70px;
   border-bottom-right-radius: 70px;
   border-top-right-radius: 70px;
-
   box-shadow: 0px 0px 15px #444;
   -webkit-box-shadow: 0px 0px 15px #444;
 }
@@ -96,22 +94,18 @@
   top: 45%;
   z-index: 25;
   overflow: hidden;
-  
   background: #303743;
   background-image: url('../img/sidebar-arrow.png');
   background-repeat: no-repeat;
   background-size: 100% 100%;
-  
   border: 10px solid #e0dfeb;
   border-top-left-radius: 70px;
   border-bottom-left-radius: 70px;
   border-bottom-right-radius: 70px;
   border-top-right-radius: 70px;
-  
   font-size: 50px;
   font-family: arial;
   color: #e0dfeb;
-
 }
 
 #show_sidebar:hover {
@@ -125,7 +119,6 @@
   width: 180px;
   right: 0px;
   top: 15px;
-  
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   box-shadow: 0px 0px 15px #444444;
@@ -193,13 +186,19 @@
 #videoboxes {
   display: inline-block;
   margin: 15px auto 0px auto;
-  opacity: 0;
 }
 
 #videoboxes .user {
   width: 600px;
   float: left;
   margin: 10px;
+}
+
+#videoboxes .videoPoster {
+  width: auto;
+  height: auto;
+  background: url('../img/avatar.jpg');
+  display: inline-block;
 }
 
 #videoboxes .name {
@@ -217,7 +216,9 @@
 video {
   float: left;
   width: 100%;
+  height: 100%;
   background: #999;
+  opacity: 0;
 }
 
 #videoboxes form, textarea, input {
@@ -229,7 +230,7 @@ video {
 }
 
 .videoOptions {
- // display: none;
+  display: none;
   opacity: 0;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
@@ -302,11 +303,11 @@ video {
   height: 20px;
 }
 
-#faceDetectorOutput{
+#faceDetectorOutput {
   width: 100%;
   float: left;
   background: #A0A0A0;
-  display:none;
+  display: none;
 }
 
 #progressSnapshotbar {
@@ -314,6 +315,6 @@ video {
   margin: 0 auto;
 }
 
-.room-wrapper{
+.room-wrapper {
   text-align: center;
 }
