--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -189,6 +189,7 @@
 
 #videoboxes .user {
   width: 600px;
+  height: 527px;
   float: left;
   margin: 10px;
 }
@@ -196,7 +197,7 @@
 .videoWrapper {
   text-align: left;
   position: relative;
-  width: 600px;
+  width: 100%;
   height: 450px;
   margin: 27px 0 0 0;
   padding: 0;
