--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ header {
   position: absolute;
   top: 0px;
   width: 100%;
-  z-index: 100;
+  z-index: 60;
 }
 
 #infoButton {
@@ -166,10 +166,10 @@ header {
   width: 50px;
   height: 50px;
   border-bottom-right-radius: 50px;
-  border-right: 8px solid #e0dfeb;
-  border-bottom: 8px solid #e0dfeb;
+  border-right: 8px solid #66666B;
+  border-bottom: 8px solid #66666B;
   box-shadow: 0px 0px 15px #444444;
-  background: #303743;
+  background: #66666B;
   background-image: url('../img/info.png');
   background-size: 40%;
   background-repeat: no-repeat;
@@ -181,10 +181,10 @@ header {
   width: 50px;
   height: 50px;
   border-bottom-right-radius: 50px;
-  border-right: 8px solid #e0dfeb;
-  border-bottom: 8px solid #e0dfeb;
+  border-right: 8px solid #66666B;
+  border-bottom: 8px solid #66666B;
   box-shadow: 0px 0px 15px #444444;
-  background: #303743;
+  background: #66666B;
   background-image: url('../img/backbutton.png');
   background-size: 70%;
   background-repeat: no-repeat;
