--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -433,6 +433,7 @@
   background-repeat: no-repeat;
   top: 60px;
   left: 10px;
+  display:none;
 }
 
 .recordLocalAudio{
@@ -456,6 +457,7 @@
   background-repeat: no-repeat;
   top: 90px;
   left: 10px;
+  display:none;
 }
 
 .countryLocation{
