--- a/assets/css/room.css
+++ b/assets/css/room.css
@@ -128,9 +128,11 @@
 
 .socialButtons {
   cursor: pointer;
-  width: 74.5px;
+  width: 75px;
   height: 25px;
   float: left;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
   overflow: hidden;
 }
 
@@ -188,7 +190,7 @@ line-height: 1.5;
   background-repeat: no-repeat;
 }
 
-.email_button {
+#email_tab {
   display: block;
   background: #fbfbfb;
   background-image: url('../img/sidebar/email.png');
@@ -197,7 +199,7 @@ line-height: 1.5;
   background-repeat: no-repeat;
 }
 
-.qr_code{
+#qr_tab{
   display: block;
   background: #66666b;
   background-image: url('../img/sidebar/qrcode.png');
@@ -207,16 +209,12 @@ line-height: 1.5;
 }
 
 .tab_active{
-  border-top: 1px solid #444444;
-  border-left: 1px solid #444444;
-  border-right: 1px solid #444444;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+  border-bottom: 4px solid #fff;
   box-shadow: inset 0px 1px 1px #999;
 }
 
-.inactive{
-  border-bottom: 1px solid #444444;
+.tab_inactive{
+  border-bottom: 4px solid #444444;
   box-shadow: inset 1px 0px 1px #888;
 }
 
@@ -444,7 +442,8 @@ line-height: 1.5;
 }
 
 #qrcode_box{
-  height:100px;
+  display: none;
+  height:100%;
   width:100%;
 }
 
